test/data/valid-messages/standard-service-exists.message
# Standard org.freedesktop.DBus.ServiceExists message

VALID_HEADER method_call
FIELD_NAME path
TYPE OBJECT_PATH
OBJECT_PATH '/org/freedesktop/DBus'
FIELD_NAME ifce
TYPE STRING
STRING 'org.freedesktop.DBus'
FIELD_NAME mebr
TYPE STRING
STRING 'ServiceExists'
FIELD_NAME srvc
TYPE STRING
STRING 'org.freedesktop.DBus'
ALIGN 8
END_LENGTH Header
START_LENGTH Body
TYPE STRING
STRING 'org.freedesktop.DBus.Sample'
END_LENGTH Body
